--- a/web/frontend/package.json
+++ b/web/frontend/package.json
@@ -70,5 +70,5 @@
     "jest": "^29.7.0",
     "react-test-renderer": "^18.2.0"
   },
-  "proxy": "http://localhost:1337"
+  "proxy": "https://smart-waste-nairobi-chi.vercel.app"
 }
