--- a/web/frontend/package.json
+++ b/web/frontend/package.json
@@ -1,21 +1,21 @@
 {
   "name": "frontend",
-  "version": "0.1.0",
+  "version": "0.1.0", 
   "private": true,
   "dependencies": {
     "@chakra-ui/react": "^2.8.2",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
-    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2", 
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@react-google-maps/api": "^2.19.2",
     "@testing-library/user-event": "^13.5.0",
-    "@types/mapbox-gl": "^2.7.19",
+    "@types/mapbox-gl": "^2.7.19", 
     "axios": "^1.6.5",
     "bootstrap": "^5.3.2",
     "cors": "^2.8.5",
     "crypto-browserify": "^3.12.0",
     "dotenv": "^16.4.1",
-    "install": "^0.13.0",
+    "install": "^0.13.0", 
     "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
     "mapbox-gl": "^3.0.1",
@@ -26,7 +26,7 @@
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
-    "react-leaflet": "^4.2.1",
+    "react-leaflet": "^4.2.1", 
     "react-map-gl": "^7.1.7",
     "react-router": "^6.19.0",
     "react-router-dom": "^6.19.0",
@@ -37,7 +37,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start", 
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -46,12 +46,17 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules": {
+      "no-unused-vars": "off",
+      "react-hooks/exhaustive-deps": "off",
+      "jsx-a11y/img-redundant-alt": "off"
+    }
   },
   "browserslist": {
     "production": [
       ">0.2%",
-      "not dead",
+      "not dead", 
       "not op_mini all"
     ],
     "development": [
@@ -62,11 +67,11 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.16.7",
-    "@babel/plugin-transform-private-property-in-object": "^7.23.4",
+    "@babel/plugin-transform-private-property-in-object": "^7.23.4", 
     "@babel/preset-env": "^7.23.8",
     "@testing-library/jest-dom": "^6.2.0",
     "@testing-library/react": "^14.1.2",
-    "babel-jest": "^29.7.0",
+    "babel-jest": "^29.7.0", 
     "jest": "^29.7.0",
     "react-test-renderer": "^18.2.0"
   },
