--- a/web/backend/package.json
+++ b/web/backend/package.json
@@ -1,34 +1,24 @@
 {
-  "name": "backend",
+  "name": "smartwaste-web",
   "version": "1.0.0",
-  "description": "3yp project",
-  "main": "server.js",
+  "description": "SmartWaste Nairobi Web Dashboard",
+  "main": "src/App.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@aws-sdk/client-iot": "^3.496.0",
-    "@aws-sdk/client-iot-data-plane": "^3.496.0",
-    "@aws-sdk/middleware-sdk-s3": "^3.496.0",
-    "@aws-sdk/middleware-signing": "^3.496.0",
-    "aws-sdk": "^2.1543.0",
     "axios": "^1.6.5",
-    "bcrypt": "^6.0.0",
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.1",
-    "env": "^0.0.2",
-    "express": "^4.18.2",
-    "http": "^0.0.1-security",
-    "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.3.0",
-    "mongoose": "^8.0.1",
-    "mqtt": "^5.3.4",
-    "socket.io": "^4.7.4",
-    "validator": "^13.11.0"
+    "bootstrap": "^5.3.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0"
   }
 }
