--- a/mobile/app.json
+++ b/mobile/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "SmartWaste",
-    "slug": "smartwaste-nairobi",
+    "slug": "SmartWaste-Mobile-New",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
